[package]
name = "mptun"
version = "0.1.0"
authors = ["drblah <theblahblah2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
tokio-tun = "0.3.16"
tokio = { version = "1.6.0", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_arrays = "0.1.0"
bincode = "1.3.3"
socket2 = { version = "0.4.0", features = ["all"]}
libc = "0.2.94"
clap = { version = "3.1.5", features = ["derive"] }
serde_json = "1.0.64"
serde_bytes = "0.11"
uuid = { version = "0.8", features = ["serde", "v4"] }
etherparse = "0.9.0"
lz4_flex = "0.9.0"